Added settings screen

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -22,4 +22,5 @@ flutter:
     - assets/images/background.jpg
     # Logos
     - assets/logo/mittverk.svg
-    # Vectors
+    # Vectors & Icons
+    - assets/icons/gear.svg
