Make timer abit more nice looking and add icons

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,3 +24,7 @@ flutter:
     - assets/logo/mittverk.svg
     # Vectors & Icons
     - assets/icons/gear.svg
+    - assets/icons/comment.svg
+    - assets/icons/pause.svg
+    - assets/icons/resume.svg
+    - assets/icons/stop.svg
