--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter_svg: ^0.17.1
   cupertino_icons: ^0.1.2
   fluro: ^1.6.2
+  firebase_core: ^0.4.0+9
+  firebase_analytics: ^5.0.2
+  firebase_auth: ^0.16.0
 
 flutter:
   uses-material-design: true
