--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   dio: ^3.0.7
   flutter_svg: ^0.17.1
   cupertino_icons: ^0.1.2
+  sliding_up_panel: ^1.0.2
   fluro: ^1.6.2
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
