--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -10,7 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^3.2.0
+  cookie_jar: ^1.0.0
   dio: ^3.0.7
+  dio_cookie_manager: 1.0.0
   flutter_svg: ^0.17.1
   cupertino_icons: ^0.1.2
   sliding_up_panel: ^1.0.2
