--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -20,6 +20,12 @@ dependencies:
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.16.0
   time: "^1.3.0"
+  flutter_launcher_icons: "^0.7.3"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app_icon.png"
 
 flutter:
   uses-material-design: true
