--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -19,8 +19,9 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.16.0
-  time: "^1.3.0"
-  flutter_launcher_icons: "^0.7.3"
+  time: ^1.3.0
+  flutter_launcher_icons: ^0.7.3
+  intl: ^0.16.1
 
 flutter_icons:
   android: "launcher_icon"
