--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -26,6 +26,14 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin: 'com.google.gms.google-services'  // Google Services plugin
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if ( keystorePropertiesFile.exists()) {
+	 keystorePropertiesFile.withReader('UTF-8') { reader ->
+		 keystoreProperties.load(reader)
+	}
+}
+
 android {
     compileSdkVersion 28
 
@@ -38,7 +46,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.gigover.app"
+        applicationId "com.gigover.project"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
@@ -46,12 +54,19 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+	signingConfigs {
+		release {
+			keyAlias keystoreProperties['keyAlias']
+			keyPassword keystoreProperties['keyPassword']
+			storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+			storePassword keystoreProperties['storePassword']
+		}
+	}
+
     buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
-        }
+		release {
+			signingConfig signingConfigs.release
+		}
     }
 }
 
