--- a/web/package.json
+++ b/web/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.20.0",
     "firebase": "^7.21.0",
     "history": "^5.0.0",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-query": "^2.23.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
@@ -34,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^12.12.62",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
