--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "firebase": "^7.21.0",
     "history": "^5.0.0",
     "normalize.css": "^8.0.1",
+    "polished": "^3.6.7",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
