--- a/web/package.json
+++ b/web/package.json
@@ -43,6 +43,7 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^12.12.62",
     "@types/react": "^16.9.49",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
