--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "polished": "^3.6.7",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-compound-timer": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
     "react-query": "^2.23.0",
