--- a/web/package.json
+++ b/web/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.20.0",
+    "date-fns": "^2.16.1",
     "firebase": "^7.21.0",
     "history": "^5.0.0",
+    "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "polished": "^3.6.7",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-compound-timer": "^1.2.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
     "react-query": "^2.23.0",
@@ -42,9 +45,11 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.12.62",
     "@types/react": "^16.9.49",
     "@types/react-beautiful-dnd": "^13.0.0",
+    "@types/react-dates": "^21.8.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
