--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   provider: ^3.2.0
   cookie_jar: ^1.0.0
   dio: ^3.0.7
+  shared_preferences: ^0.5.12+2
   dio_cookie_manager: 1.0.0
   flutter_svg: ^0.18.0
   cupertino_icons: ^0.1.2
