--- a/web/package.json
+++ b/web/package.json
@@ -3,28 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.3.4",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "axios": "^0.20.0",
     "date-fns": "^2.16.1",
     "firebase": "^7.21.0",
     "history": "^5.0.0",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
-    "polished": "^3.6.7",
-    "react": "^16.13.1",
+    "polished": "^4.1.1",
+    "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-compound-timer": "^1.2.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
-    "react-query": "^2.23.0",
+    "react-query": "^3.12.1",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0",
-    "typescript": "^3.7.5"
+    "react-scripts": "^4.0.3",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
     "deploy": "yarn build && firebase deploy --only hosting"
   },
@@ -44,26 +46,24 @@
     ]
   },
   "devDependencies": {
+    "typescript": "^4.2.3",
     "@types/axios": "^0.14.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^12.12.62",
-    "@types/react": "^16.9.49",
+    "@types/react": "^17.0.3",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dates": "^21.8.0",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
-    "customize-cra": "^1.0.0",
-    "customize-cra-react-refresh": "^1.1.0",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "prettier": "^2.1.2",
-    "prettier-eslint": "^11.0.0",
-    "react-app-rewired": "^2.1.6"
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^11.0.0"
   }
 }
