--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "date-fns": "^2.16.1",
     "firebase": "^7.21.0",
+    "framer-motion": "^3.10.2",
     "history": "^5.0.0",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
@@ -46,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^4.2.3",
     "@types/axios": "^0.14.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^12.12.62",
@@ -64,6 +64,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
-    "prettier-eslint": "^11.0.0"
+    "prettier-eslint": "^11.0.0",
+    "typescript": "^4.2.3"
   }
 }
