--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@types/react-datepicker": "^3.1.7",
     "axios": "^0.20.0",
     "date-fns": "^2.16.1",
     "firebase": "^7.21.0",
@@ -17,9 +18,10 @@
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-compound-timer": "^1.2.0",
+    "react-datepicker": "^3.6.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^6.8.4",
+    "react-hook-form": "^6.15.4",
     "react-query": "^3.12.1",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
