--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "polished": "^4.1.1",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-compound-timer": "^1.2.0",
@@ -25,7 +26,8 @@
     "react-query": "^3.12.1",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "use-query-params": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
