--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "react-query": "^3.12.1",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.2.1",
     "styled-components": "^5.2.1",
     "use-query-params": "^1.2.0"
   },
@@ -59,6 +60,7 @@
     "@types/react-dates": "^21.8.0",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-select": "^4.0.13",
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
