--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,8 @@
     "react-scripts": "^4.0.3",
     "react-select": "^4.2.1",
     "styled-components": "^5.2.1",
-    "use-query-params": "^1.2.0"
+    "use-query-params": "^1.2.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,6 +63,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^4.0.13",
     "@types/styled-components": "^5.1.3",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
