--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -66,7 +66,7 @@
     "comma-dangle": "off",
     "global-require": "off",
     "new-cap": "off",
-    "no-console": 2,
+    "no-console": "off",
     "no-mixed-operators": "off",
     "no-mixed-spaces-and-tabs": "off",
     "operator-assignment": [
