--- a/web/package.json
+++ b/web/package.json
@@ -22,12 +22,13 @@
     "react-datepicker": "^3.6.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.3.2",
     "react-hook-form": "^6.15.4",
     "react-query": "^3.12.1",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
     "react-select": "^4.2.1",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.2.3",
     "use-query-params": "^1.2.0",
     "uuid": "^8.3.2"
   },
