--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,21 +4,24 @@
   "description": "Gigover Frontend Web",
   "author": "Igital ehf.",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3005",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "next": "^10.2.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.2",
     "react-query": "^3.15.2",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^17.0.5",
     "@types/styled-components": "^5.1.9",
     "prettier": "^2.2.1",
