--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.1.5",
     "@types/react-datepicker": "^3.1.7",
     "axios": "^0.20.0",
+    "core-js": "^3.12.1",
     "date-fns": "^2.16.1",
     "firebase": "^7.21.0",
     "framer-motion": "^3.10.2",
