--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.5",
     "@types/styled-components": "^5.1.9",
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
