--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@types/react-datepicker": "^3.1.7",
+    "@types/react-pdf": "^5.0.2",
     "axios": "^0.20.0",
     "core-js": "^3.12.1",
     "date-fns": "^2.16.1",
@@ -26,6 +27,7 @@
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^6.15.4",
     "react-image-annotation": "^0.9.10",
+    "react-pdf": "^5.3.0",
     "react-query": "^3.12.1",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
