--- a/web/package.json
+++ b/web/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "http-proxy-middleware": "^2.0.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^11.0.0",
     "typescript": "^4.2.3"
