--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "Gigover Frontend Web",
   "author": "Igital ehf.",
+  "main": "function.js",
   "scripts": {
     "dev": "next dev -p 3005",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "firebase deploy --only functions:nextServer,hosting"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -18,6 +20,8 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
     "react-query": "^3.15.2",
+    "firebase-admin": "^9.10.0",
+    "firebase-functions": "^3.14.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
