--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,17 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "firebase-admin": "^9.10.0",
+    "firebase-functions": "^3.14.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "next": "^10.2.0",
+    "next-intercom": "^0.1.3",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
     "react-query": "^3.15.2",
-    "firebase-admin": "^9.10.0",
-    "firebase-functions": "^3.14.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
