--- a/web/package.json
+++ b/web/package.json
@@ -29,9 +29,10 @@
     "react-image-annotation": "^0.9.10",
     "react-pdf": "^5.3.0",
     "react-query": "^3.12.1",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.6",
     "react-scripts": "^4.0.3",
     "react-select": "^4.2.1",
+    "react-table": "^7.7.0",
     "react-tippy": "^1.4.0",
     "styled-components": "^5.2.3",
     "use-query-params": "^1.2.0",
@@ -69,6 +70,7 @@
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^4.0.13",
+    "@types/react-table": "^7.7.6",
     "@types/styled-components": "^5.1.3",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
