--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.3.2",
+    "react-google-maps": "^9.4.5",
     "react-hook-form": "^6.15.4",
     "react-image-annotation": "^0.9.10",
     "react-pdf": "^5.3.0",
