--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-compound-timer": "^1.2.0",
+    "react-countdown": "^2.3.2",
     "react-datepicker": "^3.6.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
