--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "firebase-functions": "^3.14.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
+    "intercom-next": "^1.3.5",
     "next": "^10.2.0",
     "next-intercom": "^0.1.3",
     "normalize.css": "^8.0.1",
