--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "firebase": "^7.21.0",
     "framer-motion": "^3.10.2",
     "history": "^5.0.0",
+    "lexorank": "^1.0.4",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "polished": "^4.1.1",
@@ -66,14 +67,14 @@
     "@types/node": "^12.12.62",
     "@types/react": "^17.0.3",
     "@types/react-beautiful-dnd": "^13.0.0",
+    "@types/react-datepicker": "^3.1.7",
     "@types/react-dates": "^21.8.0",
     "@types/react-dom": "^17.0.2",
+    "@types/react-pdf": "^5.0.8",
     "@types/react-select": "^4.0.13",
     "@types/react-table": "^7.7.6",
     "@types/styled-components": "^5.1.3",
     "@types/uuid": "^8.3.0",
-    "@types/react-datepicker": "^3.1.7",
-    "@types/react-pdf": "^5.0.8",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
