--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
@@ -28,6 +29,7 @@
     "react-google-maps": "^9.4.5",
     "react-hook-form": "^6.15.4",
     "react-image-annotation": "^0.9.10",
+    "react-medium-image-zoom": "^4.3.5",
     "react-pdf": "^5.4.1",
     "react-query": "^3.12.1",
     "react-router-dom": "^6.0.0-beta.6",
