--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -4,25 +4,27 @@ description: Mittverk Flutter app
 version: 2.0.4+30
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+
   flutter:
     sdk: flutter
-  provider: ^3.2.0
-  cookie_jar: ^1.0.0
-  dio: ^3.0.7
-  shared_preferences: ^0.5.12+2
-  dio_cookie_manager: 1.0.0
-  flutter_svg: ^0.18.0
-  cupertino_icons: ^0.1.2
-  sliding_up_panel: ^1.0.2
-  firebase_core: ^0.4.0+9
-  firebase_analytics: ^5.0.2
-  firebase_auth: ^0.16.1
-  time: ^1.3.0
-  flutter_launcher_icons: ^0.7.3
-  intl: ^0.16.1
+  ffi: ^1.0.0
+  provider: ^6.0.1
+  cookie_jar: ^3.0.1
+  dio: ^4.0.4
+  shared_preferences: ^2.0.4
+  dio_cookie_manager: ^2.0.0
+  flutter_svg: ^0.22.0
+  cupertino_icons: ^1.0.4
+  sliding_up_panel: ^2.0.0+1
+  firebase_core: ^1.10.0
+  firebase_analytics: ^8.3.4
+  firebase_auth: ^3.2.0
+  time: ^2.0.1
+  flutter_launcher_icons: ^0.9.2
+  intl: ^0.17.0
 
 flutter_icons:
   android: "launcher_icon"
