--- a/web/package.json
+++ b/web/package.json
@@ -7,15 +7,18 @@
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@hookform/error-message": "^2.0.0",
     "axios": "^0.20.0",
     "core-js": "^3.12.1",
     "date-fns": "^2.16.1",
     "firebase": "^7.21.0",
     "framer-motion": "^3.10.2",
     "history": "^5.0.0",
+    "install": "^0.13.0",
     "lexorank": "^1.0.4",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
+    "npm": "^8.3.0",
     "polished": "^4.1.1",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
