--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
     "react-select": "^4.2.1",
     "react-table": "^7.7.0",
     "react-tippy": "^1.4.0",
+    "react-to-pdf": "^0.0.14",
     "styled-components": "^5.2.3",
     "use-query-params": "^1.2.0",
     "use-resize-observer": "^7.0.0",
