--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_analytics: ^8.3.4
   firebase_auth: ^3.2.0
+  firebase_messaging: ^11.2.4
   time: ^2.0.1
   flutter_launcher_icons: ^0.9.2
   intl: ^0.17.0
