--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,7 @@
     "react-table": "^7.7.0",
     "react-tippy": "^1.4.0",
     "react-to-pdf": "^0.0.14",
+    "react-zoom-pan-pinch": "^2.1.3",
     "styled-components": "^5.2.3",
     "use-query-params": "^1.2.0",
     "use-resize-observer": "^7.0.0",
