--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^6.15.4",
     "react-image-annotation": "^0.9.10",
     "react-medium-image-zoom": "^4.3.5",
+    "react-mentions": "^4.3.1",
     "react-pdf": "^5.4.1",
     "react-query": "^3.12.1",
     "react-router-dom": "^6.0.0-beta.6",
@@ -77,6 +78,7 @@
     "@types/react-datepicker": "^3.1.7",
     "@types/react-dates": "^21.8.0",
     "@types/react-dom": "^17.0.2",
+    "@types/react-mentions": "^4.1.5",
     "@types/react-pdf": "^5.0.8",
     "@types/react-select": "^4.0.13",
     "@types/react-table": "^7.7.6",
