--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mittverk
 description: Mittverk Flutter app
 
-version: 2.0.8+41
+version: 2.1.0+42
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -26,6 +26,7 @@ dependencies:
   time: ^2.0.1
   flutter_launcher_icons: ^0.9.2
   intl: ^0.17.0
+  url_launcher: ^6.0.20
 
 flutter_icons:
   android: "launcher_icon"
@@ -47,3 +48,4 @@ flutter:
     - assets/icons/stop.svg
     - assets/icons/timer.svg
     - assets/icons/beach.svg
+    - assets/icons/bell.svg
