--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   intl: ^0.17.0
   url_launcher: ^6.0.20
+  rich_text_controller: ^1.4.0
+  flutter_portal: ^0.4.0
+  flutter_mentions: ^2.0.1
+
 
 flutter_icons:
   android: "launcher_icon"
