--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,13 +1,12 @@
 name: mittverk
 description: Mittverk Flutter app
 
-version: 2.1.1+43
+version: 2.1.2+44
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-
   flutter:
     sdk: flutter
   ffi: ^1.0.0
@@ -23,6 +22,7 @@ dependencies:
   firebase_analytics: ^8.3.4
   firebase_auth: ^3.2.0
   firebase_messaging: ^11.2.4
+  firebase_storage: ^10.2.18
   time: ^2.0.1
   flutter_launcher_icons: ^0.9.2
   intl: ^0.17.0
@@ -30,7 +30,8 @@ dependencies:
   rich_text_controller: ^1.4.0
   flutter_portal: ^0.4.0
   flutter_mentions: ^2.0.1
-
+  file_picker: ^4.6.1
+  uuid: ^3.0.6
 
 flutter_icons:
   android: "launcher_icon"
