--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.0.0-beta.6",
     "react-scripts": "^4.0.3",
+    "react-scroll": "^1.8.7",
     "react-select": "^5.4.0",
     "react-table": "^7.7.0",
     "react-tippy": "^1.4.0",
