--- a/web/package.json
+++ b/web/package.json
@@ -55,7 +55,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"eject": "react-scripts eject",
-		"deploy": "export NODE_ENV=production && yarn build && firebase deploy --only hosting"
+		"deploy": "export NODE_ENV=production && npm run build && firebase deploy --only hosting"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
