--- a/web/package.json
+++ b/web/package.json
@@ -5,12 +5,14 @@
 	"dependencies": {
 		"@chakra-ui/icons": "^1.1.1",
 		"@chakra-ui/react": "^1.3.4",
+		"@emailjs/browser": "^3.10.0",
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
 		"@hookform/error-message": "^2.0.0",
 		"axios": "^0.20.0",
 		"core-js": "^3.12.1",
 		"date-fns": "^2.16.1",
+		"email-js": "^2.0.2",
 		"firebase": "^7.21.0",
 		"framer-motion": "^3.10.2",
 		"history": "^5.0.0",
