--- a/web/.env
+++ b/web/.env
@@ -2,3 +2,6 @@
 SKIP_PREFLIGHT_CHECK=true
 ESLINT_NO_DEV_ERRORS=true
 ENVIRONMENT=dev
+EMAIL_SERVICE_ID=service_ja5bcmu
+Email_TEMPLATE_ID=template_2j30xxt
+EMAIL_USER_ID=yz_BqW8_gSHEh6eAL
