--- a/web/package.json
+++ b/web/package.json
@@ -33,14 +33,14 @@
 		"react-dom": "^16.13.1",
 		"react-dropzone": "^11.3.2",
 		"react-google-maps": "^9.4.5",
-		"react-hook-form": "^6.15.4",
+		"react-hook-form": "7.43.9",
 		"react-image-annotation": "^0.9.10",
 		"react-medium-image-zoom": "^4.3.5",
 		"react-mentions": "^4.3.1",
 		"react-pdf": "^5.4.1",
 		"react-query": "^3.39.2",
 		"react-router-dom": "^6.0.0-beta.6",
-		"react-scripts": "^4.0.3",
+		"react-scripts": "^5.0.1",
 		"react-scroll": "^1.8.7",
 		"react-scroll-into-view": "^1.12.0",
 		"react-select": "^5.4.0",
@@ -78,7 +78,7 @@
 		"@types/axios": "^0.14.0",
 		"@types/moment": "^2.13.0",
 		"@types/node": "^12.12.62",
-		"@types/react": "^17.0.3",
+		"@types/react": "18.0.9",
 		"@types/react-beautiful-dnd": "^13.0.0",
 		"@types/react-datepicker": "^3.1.7",
 		"@types/react-dates": "^21.8.0",
@@ -89,16 +89,16 @@
 		"@types/react-table": "^7.7.6",
 		"@types/styled-components": "^5.1.3",
 		"@types/uuid": "^8.3.0",
-		"@typescript-eslint/eslint-plugin": "^4.17.0",
-		"@typescript-eslint/parser": "^4.17.0",
-		"eslint": "^7.21.0",
+		"@typescript-eslint/eslint-plugin": "5.58.0",
+		"@typescript-eslint/parser": "5.58.0",
+		"eslint": "8.38.0",
 		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-react": "^7.22.0",
-		"eslint-plugin-react-hooks": "^4.2.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react": "7.32.2",
+		"eslint-plugin-react-hooks": "4.6.0",
 		"http-proxy-middleware": "^2.0.0",
 		"prettier": "^2.2.1",
-		"prettier-eslint": "^11.0.0",
+		"prettier-eslint": "15.0.1",
 		"typescript": "^4.2.3"
 	}
 }
