--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,7 @@
 		"react-beautiful-dnd-grid": "^0.1.3-alpha",
 		"react-compound-timer": "^1.2.0",
 		"react-countdown": "^2.3.2",
-		"react-datepicker": "^3.6.0",
+		"react-datepicker": "4.11.0",
 		"react-dates": "^21.8.0",
 		"react-dom": "^16.13.1",
 		"react-dropzone": "^11.3.2",
