--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@chakra-ui/icons": "^1.1.1",
-		"@chakra-ui/react": "^1.3.4",
+		"@chakra-ui/icons": "1.1.1",
+		"@chakra-ui/react": "1.3.4",
 		"@emailjs/browser": "^3.10.0",
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
