--- a/web/package.json
+++ b/web/package.json
@@ -99,6 +99,6 @@
 		"http-proxy-middleware": "^2.0.0",
 		"prettier": "^2.2.1",
 		"prettier-eslint": "15.0.1",
-		"typescript": "^4.2.3"
+		"typescript": "5.0.4"
 	}
 }
