--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@chakra-ui/icons": "1.1.1",
-		"@chakra-ui/react": "1.3.4",
+		"@chakra-ui/icons": "2.0.18",
+		"@chakra-ui/react": "2.5.5",
 		"@emailjs/browser": "^3.10.0",
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
@@ -23,14 +23,14 @@
 		"npm": "^8.3.0",
 		"polished": "^4.1.1",
 		"query-string": "^6.14.1",
-		"react": "^17.0.1",
+		"react": "18.0.0",
 		"react-beautiful-dnd": "^13.0.0",
 		"react-beautiful-dnd-grid": "^0.1.3-alpha",
 		"react-compound-timer": "^1.2.0",
 		"react-countdown": "^2.3.2",
 		"react-datepicker": "4.11.0",
 		"react-dates": "^21.8.0",
-		"react-dom": "^16.13.1",
+		"react-dom": "18.0.0",
 		"react-dropzone": "^11.3.2",
 		"react-google-maps": "^9.4.5",
 		"react-hook-form": "7.43.9",
