--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@chakra-ui/icons": "2.0.18",
-		"@chakra-ui/react": "2.5.5",
+		"@chakra-ui/icons": "^2.0.18",
+		"@chakra-ui/react": "^2.5.5",
 		"@emailjs/browser": "^3.10.0",
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
@@ -24,7 +24,7 @@
 		"polished": "^4.1.1",
 		"query-string": "^6.14.1",
 		"react": "18.0.0",
-		"react-beautiful-dnd": "^13.0.0",
+		"react-beautiful-dnd": "^13.1.1",
 		"react-beautiful-dnd-grid": "^0.1.3-alpha",
 		"react-compound-timer": "^1.2.0",
 		"react-countdown": "^2.3.2",
