--- a/web/package.json
+++ b/web/package.json
@@ -23,14 +23,14 @@
 		"npm": "^8.3.0",
 		"polished": "^4.1.1",
 		"query-string": "^6.14.1",
-		"react": "18.0.0",
+		"react": "^18.2.0",
 		"react-beautiful-dnd": "^13.1.1",
 		"react-beautiful-dnd-grid": "^0.1.3-alpha",
 		"react-compound-timer": "^1.2.0",
 		"react-countdown": "^2.3.2",
 		"react-datepicker": "4.11.0",
 		"react-dates": "^21.8.0",
-		"react-dom": "18.0.0",
+		"react-dom": "^18.2.0",
 		"react-dropzone": "^11.3.2",
 		"react-google-maps": "^9.4.5",
 		"react-hook-form": "7.43.9",
