refactoring google-maps package

--- a/web/.env
+++ b/web/.env
@@ -4,3 +4,4 @@ ESLINT_NO_DEV_ERRORS=true
 ENVIRONMENT=dev
 REACT_APP_EMAIL_SERVICE_ID=service_ja5bcmu
 REACT_APP_EMAIL_TEMPLATE_ID=template_2j30xxt
+GOOGLE_MAPS_API_KEY=AIzaSyDUUq37d9y1yAq-DmaOpzqiVK9zrZ0miys
