--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
 		"@hookform/error-message": "^2.0.0",
+		"@react-google-maps/api": "^2.18.1",
 		"axios": "^0.20.0",
 		"core-js": "^3.12.1",
 		"date-fns": "^2.16.1",
