--- a/web/.env
+++ b/web/.env
@@ -4,4 +4,5 @@ ESLINT_NO_DEV_ERRORS=true
 ENVIRONMENT=dev
 REACT_APP_EMAIL_SERVICE_ID=service_ja5bcmu
 REACT_APP_EMAIL_TEMPLATE_ID=template_2j30xxt
+REACT_APP_EMAIL_OFFER_TEMPLATE_ID=template_u9dz673
 GOOGLE_MAPS_API_KEY=AIzaSyDUUq37d9y1yAq-DmaOpzqiVK9zrZ0miys
