--- a/web/.env
+++ b/web/.env
@@ -7,4 +7,5 @@ REACT_APP_EMAIL_TEMPLATE_ID=template_2j30xxt
 REACT_APP_EMAIL_OFFER_TEMPLATE_ID=template_u9dz673
 REACT_APP_EMAIL_TEMPLATE_ID_ACCOUNT=template_4txp78q
 REACT_APP_EMAIL_STAKEHOLDER_TEMPLATE_ID=template_xobvhl8
+REACT_APP_EMAIL_CLIENT_BID_TEMPLATE_ID=template_jzrmunl
 GOOGLE_MAPS_API_KEY=AIzaSyDUUq37d9y1yAq-DmaOpzqiVK9zrZ0miys
