--- a/new-frontend/package.json
+++ b/new-frontend/package.json
@@ -14,13 +14,16 @@
 		"@chakra-ui/react": "^2.8.2",
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
+		"@tanstack/react-query": "^5.32.0",
 		"framer-motion": "^11.1.5",
+		"graphql-request": "^6.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.22.3",
 		"styled-components": "^6.1.8"
 	},
 	"devDependencies": {
+		"@types/node": "^20.12.7",
 		"@types/react": "^18.2.66",
 		"@types/react-dom": "^18.2.22",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
