--- a/new-frontend/package.json
+++ b/new-frontend/package.json
@@ -16,6 +16,7 @@
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
 		"@tanstack/react-query": "^5.32.0",
+		"firebase": "^10.12.0",
 		"framer-motion": "^11.1.5",
 		"graphql-request": "^6.1.0",
 		"react": "^18.2.0",
