--- a/new-frontend/package.json
+++ b/new-frontend/package.json
@@ -21,6 +21,7 @@
 		"graphql-request": "^6.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-helmet-async": "^2.0.5",
 		"react-router-dom": "^6.22.3",
 		"react-use-intercom": "^5.4.0",
 		"styled-components": "^6.1.8"
