--- a/new-frontend/package.json
+++ b/new-frontend/package.json
@@ -8,7 +8,11 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"deploy": "firebase deploy --only hosting"
+		"deploy": "firebase deploy --only hosting",
+		"postbuild": "react-snap"
+	},
+	"reactSnap": {
+		"source": "dist"
 	},
 	"dependencies": {
 		"@chakra-ui/icons": "^2.1.1",
@@ -23,6 +27,7 @@
 		"react-dom": "^18.2.0",
 		"react-helmet-async": "^2.0.5",
 		"react-router-dom": "^6.22.3",
+		"react-snap": "^1.23.0",
 		"react-use-intercom": "^5.4.0",
 		"styled-components": "^6.1.8"
 	},
