now sending emails when user do not ave account when invited to organization

--- a/web/.env
+++ b/web/.env
@@ -8,4 +8,5 @@ REACT_APP_EMAIL_OFFER_TEMPLATE_ID=template_u9dz673
 REACT_APP_EMAIL_TEMPLATE_ID_ACCOUNT=template_4txp78q
 REACT_APP_EMAIL_STAKEHOLDER_TEMPLATE_ID=template_xobvhl8
 REACT_APP_EMAIL_CLIENT_BID_TEMPLATE_ID=template_jzrmunl
+REACT_APP_EMAIL_ORGANIZATION_INVITE_TEMPLATE_ID=template_hqvfkvi
 GOOGLE_MAPS_API_KEY=AIzaSyDUUq37d9y1yAq-DmaOpzqiVK9zrZ0miys
