--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
 		"@emotion/styled": "^11.1.5",
 		"@hookform/error-message": "^2.0.0",
 		"@react-google-maps/api": "^2.18.1",
+		"@tanstack/react-query": "^5.77.0",
 		"axios": "^0.20.0",
 		"core-js": "^3.12.1",
 		"date-fns": "^2.16.1",
@@ -39,7 +40,6 @@
 		"react-medium-image-zoom": "^4.3.5",
 		"react-mentions": "^4.3.1",
 		"react-pdf": "^5.4.1",
-		"react-query": "^3.39.2",
 		"react-router-dom": "^6.0.0-beta.6",
 		"react-scripts": "^5.0.1",
 		"react-scroll": "^1.8.7",
