--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@chakra-ui/icons": "^2.2.4",
 		"@chakra-ui/react": "^2.10.4",
+		"@dnd-kit/core": "^6.3.1",
 		"@emailjs/browser": "^3.10.0",
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
