--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -25,6 +25,7 @@
 		"es2021": true
 	},
 	"rules": {
+		"react/react-in-jsx-scope": "off",
 		"react-refresh/only-export-components": "warn",
 		"@typescript-eslint/ban-ts-comment": "off",
 		"@typescript-eslint/no-explicit-any": "warn",
